# ros-task

./: pose_plot_layout.xml  yaw_plot_layout.xml
scripts/deploy/: app.sh  start.sh
workspace/limo_control/: CMakeLists.txt  diff_drive_controller.yaml
workspace/limo_control/src/: limo_node.cpp
workspace/limo_control_bringup/: CMakeLists.txt  package.xml
workspace/limo_control_bringup/launch/: limo_app.launch.py
workspace/limo_simulation/launch/: limo.launch.py
workspace/log/: latest_build
